# ComtradeScope

./: .gitignore  README.md  package-lock.json  package.json
backend/: CMakeLists.txt
backend/src/: ComtradeAnalyzer.cpp  ComtradeAnalyzer.h  ComtradeModel.h  ComtradeParser.cpp  ComtradeParser.h  ProtocolUtils.cpp  ProtocolUtils.h  WebSocketServer.cpp  WebSocketServer.h  main.cpp
samples/: demo_fault.cfg
scripts/: build-backend.ps1  run-electron.js
src/main/: main.js  preload.js
src/renderer/: index.html  renderer.js  styles.css
